@@ -1,6 +1,7 @@
 cm4all-workshop (6.14) unstable; urgency=low
 
   * workshop: fix use-after-free bug in "${0}" expansion
+  * workshop: report spawner errors
   * no delay for first PostgreSQL auto-reconnect
 
  --   
